--- a/scavengers_adventure/templates/base.html
+++ b/scavengers_adventure/templates/base.html
@@ -22,9 +22,7 @@
         <header>
           {% block header %}{% endblock %}
         </header>
-        {% for message in get_flashed_messages() %}
-        <div class="flash">{{ message }}</div>
-        {% endfor %} {% block content %}{% endblock %}
+        {% block content %}{% endblock %}
       </section>
     </main>
   </body>
