--- a/scavengers_adventure/static/style.css
+++ b/scavengers_adventure/static/style.css
@@ -8,6 +8,9 @@ html {
 }
 
 main {
+  display: flex;
+  flex-direction: column;
+  align-content: center;
   max-width: 1200px;
   min-height: 100vh;
   width: 100%;
@@ -31,7 +34,9 @@ p {
 }
 
 form {
-  margin: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: left;
 }
 
 input {
@@ -40,4 +45,35 @@ input {
 
 .flashes {
   margin: 0px 40px;
+}
+
+
+.supersecret-image {
+  text-decoration: none;
+  color: #000;
+  padding: 20px;
+  font-weight: bold;
+  margin-top: 100px;
+
+  border-radius: 5px;
+  background-color: #aaa;
+
+}
+
+.supersecret-image:hover {
+  background-color: #999;
+}
+
+.form-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+
+  margin-top: 100px;
+}
+
+.content {
+  width: 100%;
+  flex-grow: 1;
 }
