--- a/scavengers_adventure/templates/pulse.html
+++ b/scavengers_adventure/templates/pulse.html
@@ -383,7 +383,7 @@ body {
   margin-left: auto;
   margin-right: auto;
   width: 50%;
-  font-size: 1.75em;
+  font-size: 1.5em;
 }
 
 #goodLuck {
@@ -439,8 +439,10 @@ body {
     </div>
     <div id="rules"> <div class="glitch" data-text="Welcome to the scavenger hunt.">Welcome to the scavenger hunt.</div>
     
-      <p>You begin this game with a secret file. To unlock this file and complete the scavenger hunt, you must visit four locations and obtain a url from each location</p>
-      <p>Each of these links will contain a secret key. Each time you uncover a secret key, return to the server and submit the key along with your secret image file</p>
+      <p>You begin this game with a secret file. To unlock this file and complete the scavenger hunt you must visit four locations</p>
+      <p>These locations will have a 'Supersecret' access point you have to connect to and then visit its web site.</p>
+      <p>These web sites will give you a URL link that you have to visit</p>
+      <p>Each of these links will contain a secret key. Each time you uncover a secret key you can return to the this site and submit the key along with your secret image to decrypt it</p>
       <p>Once you submit the final secret key, your image will be unencrypted.</p>
     </div>
     <div id="play-btn">
